Issue syncing and stat counting
