# app/controllers/api/v1/hosts_controller.rb
@@ -1,6 +1,6 @@
 class Api::V1::HostsController < Api::V1::ApplicationController
   def index
-    @hosts = Host.all.visible.order('repositories_count DESC, issues_count DESC')
+    @hosts = Host.all.visible.order('repositories_count DESC')
   end
 
   def show
