# db/schema.rb
@@ -10,8 +10,43 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 0) do
+ActiveRecord::Schema[7.0].define(version: 2023_04_27_124909) do
   # These are extensions that must be enabled in order to support this database
+  enable_extension "pgcrypto"
   enable_extension "plpgsql"
+
+  create_table "hosts", force: :cascade do |t|
+    t.string "name"
+    t.string "url"
+    t.string "kind"
+    t.datetime "last_synced_at"
+    t.integer "repositories_count"
+    t.string "icon_url"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+  end
+
+  create_table "jobs", id: :uuid, default: -> { "gen_random_uuid()" }, force: :cascade do |t|
+    t.string "sidekiq_id"
+    t.string "status"
+    t.string "url"
+    t.string "ip"
+    t.json "results"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["status"], name: "index_jobs_on_status"
+  end
+
+  create_table "repositories", force: :cascade do |t|
+    t.integer "host_id"
+    t.string "full_name"
+    t.string "default_branch"
+    t.datetime "last_synced_at"
+    t.integer "issues_count"
+    t.string "status"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index "host_id, lower((full_name)::text)", name: "index_repositories_on_host_id_lower_full_name", unique: true
+  end
 
 end
